--- a/src/components/layout/Menu/MainMenu.module.scss
+++ b/src/components/layout/Menu/MainMenu.module.scss
@@ -19,7 +19,7 @@
     width: 330px;
     min-height: 400px;
     background: rgba(255, 255, 255, 0.639);
-    padding: 25px 40px 90px 35px;
+    padding: 10px 40px 90px 35px;
     z-index: 100;
     border: 1px solid #4444448d;
     margin: 0;
@@ -40,8 +40,8 @@
       top: 200px;
       right: 0px;
       width: 300px;
-      min-height: 400px;
-      padding: 0px 40px 90px 28px;
+      min-height: 300px;
+      padding: 15px 45px 90px 28px;
     }
 
     .logo2 {
