--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -248,7 +248,7 @@ $shadow: #2b393d;
 
       @media screen and (max-width: 450px) {
         top: 95%;
-        left: 65%;
+        left: 65.5%;
       }
     }
 
